Not visible on GD fix

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,17 @@
     font-family: "Segoe UI Semibold", "Noto Sans Medium", "Arial Unicode MS", -apple-system,
         BlinkMacSystemFont, Roboto, Open Sans, Helvetica Neue, sans-serif;
 
-    font-size: 22px;
+    font-size: 14px;
+}
+
+body,
+html,
+body>div {
+    height: 100%;
+    width: 100%;
+    min-height: 192px;
+    overflow-y: scroll;
+    margin: 0;
 }
 
 body {
